Arthritides and Image overlap bug

--- a/SPA/css/case-studies.css
+++ b/SPA/css/case-studies.css
@@ -358,7 +358,6 @@ section.header h2{
 }
 .padding{
 	padding: 10px 80px;
-	display:flex;
 	flex-direction:column;
 	width:100%;
 	box-sizing:border-box;
