--- a/SPA/css/specific-css.css
+++ b/SPA/css/specific-css.css
@@ -143,7 +143,6 @@ a.no-color{
 
 .padding{
 	padding:10px 80px;
-	display:flex;
 	flex-direction:column;
 	width:100%;
 }
